--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 
 .reg-frm-cont{
-    width:400px;
+    width:430px;
     border:1px solid rgba(67, 70, 73,0.5);  
     text-align: center;
     background-color: rgba(250, 248, 250,0.9);        
@@ -27,5 +27,20 @@
     display:flex;
     justify-content: center;
     background-image: url("../../assets/back.jpg");
-   padding: 25px;   
+    padding: 25px;   
+}
+.p1{
+    font-size: 24px;
+    margin:5px 0 0 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+.p2{
+    font-size: 18px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin:-5px 0 10px 0;
+    font-weight:400
+
+}
+.p3{
+    font-size: 12px
 }
