--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,2 @@
-<p>
-  not-found works!
-</p>
+<h1>Page not found</h1>
+<p>Uh oh, we can’t seem to find the page you’re looking for. Try going back to the previous page or see our Help Center for more information</p>
